:sparkles: some function has been create

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "laravel/ui": "^3.3",
         "spatie/laravel-permission": "^4.2",
         "yajra/laravel-datatables": "^1.5",
-        "yajra/laravel-datatables-oracle": "^9.18"
+        "yajra/laravel-datatables-oracle": "~9.0"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
